--- a/index.css
+++ b/index.css
@@ -4,9 +4,6 @@
     box-sizing: border-box;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-body{
-   z-index: 1;
-}
 #back-to-top-btn{
     display: none;
     position: fixed;
@@ -80,6 +77,7 @@ input{
     transition: transform 0.3s ease-in-out;
 }
 #openmenu:checked ~ .navigation{
+    z-index: 1;
     transform: translateY(0px);
 }
 
@@ -174,7 +172,7 @@ h3{
     height: 100%;
     margin: auto;
 }
-.about{
+#about{
     text-align: center;
     margin-top: 8rem;
     color: #cc005f;
@@ -440,7 +438,7 @@ button:hover{
 }
 /************ portfolio section *************/
 
-.portfolio{
+#portfolio{
     font-family: sans-serif;
     margin-top: 7rem;
     text-align: center;
